--- a/package.json
+++ b/package.json
@@ -1,11 +1,13 @@
 {
   "name": "ai-detective",
   "version": "0.1.0",
+  "homepage": "https://kanghohyeong.github.io/detective-infinity",
   "private": true,
   "dependencies": {
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
+    "gh-pages": "^5.0.0",
     "langchain": "^0.0.78",
     "openai": "^3.2.1",
     "react": "^18.2.0",
@@ -17,6 +19,8 @@
     "zod": "^3.21.4"
   },
   "scripts": {
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build",
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
