--- a/package.json
+++ b/package.json
@@ -4,13 +4,15 @@
   "homepage": "https://kanghohyeong.github.io/detective-infinity",
   "private": true,
   "dependencies": {
+    "@langchain/core": "^0.3.43",
+    "@langchain/openai": "^0.5.2",
     "@sakun/system.css": "^0.1.11",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "gh-pages": "^5.0.0",
-    "langchain": "^0.0.78",
-    "openai": "^3.2.1",
+    "langchain": "^0.3.19",
+    "openai": "^4.91.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.11.2",
