--- a/package.json
+++ b/package.json
@@ -19,7 +19,8 @@
     "react-scripts": "5.0.1",
     "styled-components": "^5.3.11",
     "web-vitals": "^2.1.4",
-    "zod": "^3.21.4"
+    "zod": "^3.21.4",
+    "zustand": "^5.0.3"
   },
   "scripts": {
     "predeploy": "npm run build",
